<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/attraction_list_image_view"
        android:layout_width="100dp"
        android:layout_height="1000dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_weight="1"
        android:contentDescription="@null"
        android:padding="0dp"
        android:scaleType="centerInside" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_gravity="top"
        android:layout_weight="4"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        android:paddingEnd="8dp"
        android:paddingLeft="10dp"
        android:paddingRight="8dp"
        android:paddingStart="10dp"
        android:paddingTop="8dp">

        <TextView
            android:id="@+id/attraction_list_name_text_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/dummy_attraction_name"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/font_awesome_free_solid"
                android:gravity="center_vertical"
                android:text="@string/icon_location"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                tools:targetApi="jelly_bean" />

            <TextView
                android:id="@+id/attraction_list_location_text_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:gravity="center_vertical"
                android:text="@string/dummy_attraction_location"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/attraction_list_hours_icon_text_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/font_awesome_free_reg"
                android:text="@string/icon_clock"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                tools:targetApi="jelly_bean" />

            <TextView
                android:id="@+id/attraction_list_hours_text_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:gravity="center_vertical"
                android:text="@string/dummy_attraction_hours"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>